# fog

./: .dockerignore  .gitattributes  .gitignore  .mobconf  BUILD.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TERMS-OF-USE.md  fog-threat-model-1.0.0.md  fog-threat-model-2.0.0.md  fog-threat-model-2.1.0.md  rustfmt.toml
.circleci/: config.yml
.github/: dependabot.yml  pull_request_template.md
android-bindings/: Cargo.toml  makefile
android-bindings/src/: bindings.rs  error.rs  ffi.rs  lib.rs
benchmarks/: Cargo.toml
benchmarks/benches/: tx_validation.rs
fog/api/: Cargo.toml  README.md
fog/api/proto/: fog_common.proto  ingest.proto  ingest_common.proto  kex_rng.proto  ledger.proto  view.proto
fog/api/src/: lib.rs  report_parse.rs
fog/api/tests/: fog_types.rs
fog/distribution/: Cargo.toml  README.md
fog/distribution/src/: config.rs  main.rs
fog/enclave_connection/: Cargo.toml
fog/enclave_connection/src/: lib.rs
fog/fog_timestamps/: Cargo.toml
fog/fog_timestamps/src/: lib.rs  watcher.rs
fog/fog_types/: Cargo.toml
fog/fog_types/src/: ingest.rs  ledger.rs  lib.rs  view.rs
fog/ingest/client/: Cargo.toml
fog/ingest/client/src/: config.rs  lib.rs  main.rs
fog/ingest/enclave/: Cargo.toml  build.rs
fog/ingest/enclave/api/: Cargo.toml
fog/ingest/enclave/api/src/: error.rs  lib.rs  messages.rs
fog/ingest/enclave/benches/: add_user.rs
fog/ingest/enclave/edl/: Cargo.toml
fog/ingest/enclave/impl/: Cargo.toml
fog/ingest/enclave/impl/src/: lib.rs  rng_store.rs
fog/ingest/enclave/impl/tests/: tx_processing.rs
fog/ingest/enclave/measurement/: Cargo.toml  build.rs
fog/ingest/enclave/src/: lib.rs
fog/ingest/enclave/tests/: graceful_teardown.rs
fog/ingest/enclave/trusted/: Cargo.toml  build.rs
fog/ingest/server/: Cargo.toml
fog/ingest/server/src/: config.rs  connection.rs  connection_error.rs  connection_traits.rs  controller.rs  controller_state.rs  counters.rs  error.rs  ingest_peer_service.rs  ingest_service.rs  lib.rs  server.rs  state_file.rs  worker.rs
fog/ingest/server/tests/: key_sharing_on_activate.rs  peer_key_sharing.rs  sealed_key.rs  three_node_cluster.rs  tx_recovery.rs
fog/kex_rng/: Cargo.toml
fog/kex_rng/src/: lib.rs  traits.rs
fog/kex_rng/src/versioned/: buffered.rs  macros.rs
fog/ledger/connection/: Cargo.toml
fog/ledger/connection/src/: key_image.rs  merkle_proof.rs  untrusted.rs
fog/ledger/enclave/: Cargo.toml  build.rs
fog/ledger/enclave/api/: Cargo.toml
fog/ledger/enclave/api/src/: error.rs  lib.rs  messages.rs
fog/ledger/enclave/edl/: Cargo.toml  enclave.edl
fog/ledger/enclave/impl/: Cargo.toml
fog/ledger/enclave/impl/src/: key_image_store.rs  lib.rs
fog/ledger/enclave/measurement/: Cargo.toml  build.rs
fog/ledger/enclave/src/: lib.rs
fog/ledger/enclave/trusted/: Cargo.toml  build.rs
fog/ledger/enclave/trusted/src/: lib.rs
fog/ledger/server/: Cargo.toml
fog/ledger/server/src/: block_service.rs  block_tracker.rs  config.rs  counters.rs  db_fetcher.rs  key_image_service.rs  lib.rs  merkle_proof_service.rs  server.rs
fog/ledger/server/tests/: connection.rs
fog/ledger/test_infra/: Cargo.toml
fog/ledger/test_infra/src/: lib.rs
fog/load_testing/: Cargo.toml
fog/load_testing/src/: lib.rs  sig_child_handler.rs
fog/ocall_oram_storage/edl/: Cargo.toml
fog/ocall_oram_storage/testing/: Cargo.toml
fog/ocall_oram_storage/testing/src/: lib.rs
fog/ocall_oram_storage/trusted/: Cargo.toml  README.md
fog/ocall_oram_storage/trusted/src/: extra_meta.rs  lib.rs
fog/ocall_oram_storage/untrusted/: Cargo.toml
fog/recovery_db_iface/: Cargo.toml
fog/recovery_db_iface/src/: lib.rs  types.rs
fog/report/cli/: Cargo.toml
fog/report/cli/src/: main.rs
fog/report/server/: Cargo.toml
fog/report/server/src/: config.rs
fog/sample-paykit/: Cargo.toml
fog/sample-paykit/proto/: remote_wallet.proto
fog/sample-paykit/src/: client.rs  client_builder.rs  error.rs  lib.rs
fog/sample-paykit/src/cached_tx_data/: memo_handler.rs  mod.rs
fog/sql_recovery_db/: Cargo.toml
fog/sql_recovery_db/migrations/2020-11-03-203017_create_initial_db/: up.sql
fog/sql_recovery_db/src/: error.rs  lib.rs  models.rs  proto_types.rs  schema.rs  test_utils.rs
fog/test-client/: Cargo.toml
fog/test-client/src/: test_client.rs
fog/test_infra/: Cargo.toml
fog/test_infra/src/: db_tests.rs  lib.rs  mock_client.rs  mock_users.rs
fog/uri/: Cargo.toml
fog/uri/src/: lib.rs
fog/view/connection/: Cargo.toml
fog/view/connection/src/: lib.rs
fog/view/enclave/: Cargo.toml  build.rs
fog/view/enclave/api/: Cargo.toml
fog/view/enclave/api/src/: lib.rs
fog/view/enclave/benches/: add_etxout.rs
fog/view/enclave/edl/: Cargo.toml
fog/view/enclave/impl/: Cargo.toml
fog/view/enclave/impl/src/: e_tx_out_store.rs  lib.rs
fog/view/enclave/measurement/: Cargo.toml  build.rs
fog/view/enclave/src/: lib.rs
fog/view/enclave/trusted/: Cargo.toml  build.rs
fog/view/load-test/: Cargo.toml
fog/view/load-test/src/: main.rs
fog/view/protocol/: Cargo.toml
fog/view/protocol/src/: polling.rs  user_private.rs  user_rng_set.rs
fog/view/server/: Cargo.toml
fog/view/server/src/: block_tracker.rs  config.rs  counters.rs  db_fetcher.rs  fog_view_service.rs  server.rs
fog/view/server/tests/: smoke_tests.rs
generate_test_foundation_key/: Cargo.toml
generate_test_foundation_key/src/: main.rs
go-grpc-gateway/: build.sh
hooks/: pre-commit
libmobilecoin/: Cargo.toml  Makefile  libmobilecoin_cbindgen.h
libmobilecoin/include/: bip39.h
libmobilecoin/src/: attest.rs  bip39.rs  crypto.rs  encodings.rs  fog.rs  keys.rs  slip10.rs  transaction.rs
libmobilecoin/src/common/: boundary.rs  buffer.rs  error.rs  into_ffi.rs  mod.rs  rng.rs  string.rs
tools/: download_sigstruct.sh  lint.sh
tools/fog-local-network/: README.md  fog_conformance_tests.py  fog_local_network.py  local_fog.py  remote_wallet.proto
tools/macos/vm/: .gitignore  Brewfile  Makefile  README.md  Vagrantfile
util/ffi/: Cargo.toml
util/ffi/src/: ffi_owned_ptr.rs  ffi_ref_ptr.rs  ffi_str.rs  lib.rs
(+11 files in other folders)
