cargo-features = ["named-profiles"]

[workspace]
resolver = "2"
members = [
    "android-bindings",
    "benchmarks",
    "fog/api",
    "fog/distribution",
    "fog/fog_types",
    "fog/ingest/client",
    "fog/ingest/enclave",
    "fog/ingest/enclave/api",
    "fog/ingest/enclave/edl",
    "fog/ingest/enclave/impl",
    "fog/ingest/enclave/measurement",
    "fog/ingest/server",
    "fog/kex_rng",
    "fog/ledger/connection",
    "fog/ledger/enclave",
    "fog/ledger/enclave/api",
    "fog/ledger/enclave/edl",
    "fog/ledger/enclave/impl",
    "fog/ledger/enclave/measurement",
    "fog/ledger/server",
    "fog/load_testing",
    "fog/ocall_oram_storage/edl",
    "fog/ocall_oram_storage/testing",
    "fog/ocall_oram_storage/trusted",
    "fog/ocall_oram_storage/untrusted",
    "fog/recovery_db_iface",
    "fog/report/cli",
    "fog/report/server",
    "fog/sample-paykit",
    "fog/sql_recovery_db",
    "fog/test-client",
    "fog/test_infra",
    "fog/uri",
    "fog/view/connection",
    "fog/view/enclave",
    "fog/view/enclave/api",
    "fog/view/enclave/edl",
    "fog/view/enclave/impl",
    "fog/view/enclave/measurement",
    "fog/view/load-test",
    "fog/view/protocol",
    "fog/view/server",
    "generate_test_foundation_key",
    "libmobilecoin",
    "util/ffi",
]
exclude = [
    "mobilecoin",
    "fog/ingest/enclave/trusted",
    "fog/ledger/enclave/trusted",
    "fog/view/enclave/trusted",
]

[profile.dev]
opt-level = 0

[profile.release]
debug = true
opt-level = 3
rpath = false
lto = false
debug-assertions = false
overflow-checks = false

[profile.mobile]
inherits = "release"
debug = false
lto = true

[patch.crates-io]
# Fixes for nightly-2021-07-21
blake2 = { git = "https://github.com/jcape/RustCrypto-hashes.git", rev = "fc927fb0709b93ace4a5a1f50999a2b679f8c502" }

# Not-yet-released version that depends on newer crates.
bulletproofs-og = { git = "https://github.com/jcape/bulletproofs.git", rev = "bafd274c1f1cbbac47da815dcd2bbe33c38c43eb" }

# Fixes for nightly-2021-07-21
curve25519-dalek = { git = "https://github.com/jcape/curve25519-dalek.git", rev = "46d07765b228d43fe910eb6a1769143f8fc366bb" }

# See https://github.com/commure/datatest/pull/30
datatest = { git = "https://github.com/jcape/datatest.git", rev = "04fcb4bf8ccb6b216f8d7769446f47b1a5cd0e66" }

# ed25519-dalek depends on rand 0.7 which in turns depends on a broken version of packed_simd
# This is a PR that moves it to newer rand
# See https://github.com/dalek-cryptography/ed25519-dalek/pull/160
ed25519-dalek = { git = "https://github.com/jcape/ed25519-dalek.git", rev = "5758cffaa08ed191204f3c62d8302152216e4ce5" }

# grpcio patched with metadata
grpcio = { git = "https://github.com/mobilecoinofficial/grpc-rs", rev = "10ba9f8f4546916c7e7532c4d1c6cdcf5df62553" }
protoc-grpcio = { git = "https://github.com/mobilecoinofficial/protoc-grpcio", rev = "9e63f09ec408722f731c9cb60bf06c3d46bcabec" }

# mbedtls patched to allow certificate verification with a profile
mbedtls = { git = "https://github.com/jcape/rust-mbedtls.git", rev = "1cc22203456f5a0f9e06a57d4a4e7a49582f7a90" }
mbedtls-sys-auto = { git = "https://github.com/jcape/rust-mbedtls.git", rev = "1cc22203456f5a0f9e06a57d4a4e7a49582f7a90" }

# prost is patched with no_std support (https://github.com/danburkert/prost/pull/319)
# current revision is from jun 13 2020, waiting for a new prost release
# https://github.com/danburkert/prost/issues/329
prost = { git = "https://github.com/danburkert/prost", rev = "6113789f70b69709820becba4242824b4fb3ffec" }
prost-derive = { git = "https://github.com/danburkert/prost", rev = "6113789f70b69709820becba4242824b4fb3ffec" }

# Override lmdb-rkv for a necessary bugfix (see https://github.com/mozilla/lmdb-rs/pull/80)
lmdb-rkv = { git = "https://github.com/mozilla/lmdb-rs", rev = "df1c2f5" }

# Fix issue with serde/std
serde_cbor = { git = "https://github.com/mobilecoinofficial/cbor", rev = "4c886a7c1d523aae1ec4aa7386f402cb2f4341b5" }

# Bump curve25519-dalek version to 4.0.0-pre0
x25519-dalek = { git = "https://github.com/jcape/x25519-dalek.git", rev = "c012698737563a490d1ac9516d29cd6e0bb7319e" }

# This version contains iOS build fixes
cmake = { git = "https://github.com/alexcrichton/cmake-rs", rev = "5f89f90ee5d7789832963bffdb2dcb5939e6199c" }

cc = { git ="https://github.com/eranrund/cc-rs", rev = "e8c8b2f" }

# Overridden since we need a commit that uprevs a bunch of dependencies.
schnorrkel-og = { git = "https://github.com/jcape/schnorrkel.git", rev = "b90fd446eeaef2996c199138427888afcf972bbd" }


#[ring 0.16.20] running "clang" "-O3" "-fPIC" "-g" "-fno-omit-frame-pointer" "--target=x86_64-apple-ios13.0-macabi" "-isysroot" "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.3.sdk" "-fembed-bitcode" "-I" "include" "-Wall" "-Wextra" "-std=c1x" "-Wbad-function-cast" "-Wnested-externs" "-Wstrict-prototypes" "-pedantic" "-pedantic-errors" "-Wall" "-Wextra" "-Wcast-align" "-Wcast-qual" "-Wconversion" "-Wenum-compare" "-Wfloat-equal" "-Wformat=2" "-Winline" "-Winvalid-pch" "-Wmissing-field-initializers" "-Wmissing-include-dirs" "-Wredundant-decls" "-Wshadow" "-Wsign-compare" "-Wsign-conversion" "-Wundef" "-Wuninitialized" "-Wwrite-strings" "-fno-strict-aliasing" "-fvisibility=hidden" "-fstack-protector" "-g3" "-DNDEBUG" "-c" "-o/Users/eran/Projects/fog/target/x86_64-apple-ios-macabi/release/build/ring-5d4b579f50a32f78/out/montgomery_inv.o" "crypto/fipsmodule/bn/montgomery_inv.c"
