[package]
name = "libmobilecoin"
version = "1.0.1-pre1"
authors = ["MobileCoin"]
edition = "2018"

[lib]
name = "mobilecoin"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
# External dependencies
aes-gcm = "0.6"
bip39 = "1.0.0-rc1"
displaydoc = "0.1"
libc = "0.2"
protobuf = "2.12"
rand_core = { version = "0.5", features = ["std"] }
sha2 = "0.9"
slip10_ed25519 = "0.1.3"
zeroize = "1.1"

# Lock cmake-rs verson since only 0.1.43 currently supports ios
# See: https://github.com/alexcrichton/cmake-rs/issues/87
# Note: This is not used directly by this crate, but rather is a subdependency
cmake = "= 0.1.43"

# MobileCoin dependencies
fog-kex-rng = { path = "../fog/kex_rng" }
mc-account-keys = { path = "../mobilecoin/account-keys" }
mc-api = { path = "../mobilecoin/api" }
mc-attest-ake = { path = "../mobilecoin/attest/ake" }
mc-attest-core = { path = "../mobilecoin/attest/core" }
mc-common = { path = "../mobilecoin/common", features = ["std"] }
mc-crypto-box = { path = "../mobilecoin/crypto/box" }
mc-crypto-keys = { path = "../mobilecoin/crypto/keys" }
mc-crypto-noise = { path = "../mobilecoin/crypto/noise" }
mc-crypto-rand = { path = "../mobilecoin/crypto/rand" }
mc-crypto-sig = { path = "../mobilecoin/crypto/sig" }
mc-fog-report-validation = { path = "../mobilecoin/fog/report/validation" }
mc-transaction-core = { path = "../mobilecoin/transaction/core" }
mc-transaction-std = { path = "../mobilecoin/transaction/std" }
mc-util-ffi = { path = "../util/ffi" }
mc-util-serial = { path = "../mobilecoin/util/serial", features = ["std"] }
mc-util-uri = { path = "../mobilecoin/util/uri" }

[dev-dependencies]
cbindgen = { version = "0.14" }
