[package]
name = "fog-load-testing"
version = "1.0.1-pre1"
authors = ["MobileCoin"]
edition = "2018"
license = "GPL-3.0"

[lib]
name = "fog_load_testing"
path = "src/lib.rs"

[[bin]]
name = "fog_ingest_server_load_test"
path = "src/bin/ingest.rs"

[dependencies]
# third party
arrayvec = "0.5"
grpcio = "0.6.0"
libc = "0.2.74"
nix = "0.18"
retry = "1.2"
structopt = "0.3"
tempdir = "0.3"

# mc
mc-account-keys = { path = "../../mobilecoin/account-keys" }
mc-common = { path = "../../mobilecoin/common", features = ["loggers"] }
mc-crypto-keys = { path = "../../mobilecoin/crypto/keys", default-features = false }
mc-crypto-rand = { path = "../../mobilecoin/crypto/rand" }
mc-ledger-db = { path = "../../mobilecoin/ledger/db" }
mc-transaction-core = { path = "../../mobilecoin/transaction/core" }
mc-transaction-core-test-utils = { path = "../../mobilecoin/transaction/core/test-utils" }
mc-util-build-info = { path = "../../mobilecoin/util/build/info" }
mc-util-from-random = { path = "../../mobilecoin/util/from-random" }
mc-util-grpc = { path = "../../mobilecoin/util/grpc" }
mc-util-uri = { path = "../../mobilecoin/util/uri" }
mc-watcher = { path = "../../mobilecoin/watcher" }

# fog
fog-api = { path = "../api" }
fog-ingest-client = { path = "../ingest/client" }
fog-ingest-server = { path = "../ingest/server" } # This ensures the server is built
fog-recovery-db-iface = { path = "../recovery_db_iface" }
fog-sql-recovery-db = { path = "../sql_recovery_db" }
fog-uri = { path = "../uri" }
