[package]
name = "fog-recovery-db-iface"
version = "1.0.1-pre1"
authors = ["MobileCoin"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
mc-attest-core = { path = "../../mobilecoin/attest/core", default-features = false }
mc-common = { path = "../../mobilecoin/common", default-features = false }
mc-crypto-keys = { path = "../../mobilecoin/crypto/keys", default-features = false }
mc-transaction-core = { path = "../../mobilecoin/transaction/core" }
fog-kex-rng = { path = "../kex_rng" }
fog-types = { path = "../fog_types" }

displaydoc = { version = "0.1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
