[package]
name = "fog-sample-paykit"
version = "1.0.1-pre1"
authors = ["MobileCoin"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0"

[lib]
name = "fog_sample_paykit"
path = "src/lib.rs"

[[bin]]
name = "balance_check"
path = "src/bin/balance_check.rs"

[dependencies]
mc-account-keys = { path = "../../mobilecoin/account-keys" }
mc-attest-core = { path = "../../mobilecoin/attest/core" }
mc-common = { path = "../../mobilecoin/common", features = ["log"] }
mc-connection = { path = "../../mobilecoin/connection" }
mc-consensus-api = { path = "../../mobilecoin/consensus/api" }
mc-consensus-enclave-measurement = { path = "../../mobilecoin/consensus/enclave/measurement" }
mc-crypto-keys = { path = "../../mobilecoin/crypto/keys" }
mc-crypto-rand = { path = "../../mobilecoin/crypto/rand" }
mc-fog-report-connection = { path = "../../mobilecoin/fog/report/connection" }
mc-fog-report-validation = { path = "../../mobilecoin/fog/report/validation" }
mc-transaction-core = { path = "../../mobilecoin/transaction/core" }
mc-transaction-std = { path = "../../mobilecoin/transaction/std" }
mc-util-keyfile = { path = "../../mobilecoin/util/keyfile" }
mc-util-uri = { path = "../../mobilecoin/util/uri" }

fog-api = { path = "../api" }
fog-enclave-connection = { path = "../enclave_connection" }
fog-ingest-enclave-measurement = { path = "../ingest/enclave/measurement" }
fog-ledger-connection = { path = "../ledger/connection" }
fog-ledger-enclave-measurement = { path = "../ledger/enclave/measurement" }
fog-types =  {path = "../fog_types" }
fog-uri = { path = "../uri" }
fog-view-connection = { path = "../view/connection" }
fog-view-enclave-measurement = { path = "../view/enclave/measurement" }
fog-view-protocol = { path = "../view/protocol" }

displaydoc = { version = "0.1", default-features = false }
grpcio = "0.6.0"
link-cplusplus = "1.0" # This is needed to support building on darwin which only has libc++ and not libstdc++
rand = "0.7"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
structopt = "0.3"

[dev-dependencies]
mc-common = { path = "../../mobilecoin/common", features = ["loggers"] }
mc-transaction-core-test-utils = { path = "../../mobilecoin/transaction/core/test-utils" }
