[package]
name = "fog-test-infra"
version = "1.0.0"
authors = ["MobileCoin"]
edition = "2018"
license = "GPL-3.0"

[lib]
name = "fog_test_infra"
path = "src/lib.rs"

# This is used by fog-conformance-testing
[[bin]]
name = "init_test_ledger"
path = "src/bin/init_test_ledger.rs"

# This is used by fog-conformance-testing
[[bin]]
name = "add_test_block"
path = "src/bin/add_test_block.rs"

[dependencies]
# from public
mc-account-keys = { path = "../../mobilecoin/account-keys" }
mc-common = { path = "../../mobilecoin/common" }
mc-crypto-hashes = { path = "../../mobilecoin/crypto/hashes" }
mc-crypto-keys = { path = "../../mobilecoin/crypto/keys" }
mc-ledger-db = { path = "../../mobilecoin/ledger/db" }
mc-transaction-core = { path = "../../mobilecoin/transaction/core" }
mc-util-build-info = { path = "../../mobilecoin/util/build/info" }
mc-util-from-random = { path = "../../mobilecoin/util/from-random" }
mc-util-generate-sample-ledger = { path = "../../mobilecoin/util/generate-sample-ledger" }
mc-util-keyfile = { path = "../../mobilecoin/util/keyfile" }
mc-watcher = { path = "../../mobilecoin/watcher" }
mc-watcher-api = { path = "../../mobilecoin/watcher/api" }

# from fog
fog-ingest-client = { path = "../ingest/client" }
fog-kex-rng = { path = "../kex_rng" }
fog-recovery-db-iface = { path = "../recovery_db_iface" }
fog-types = { path = "../fog_types" }
fog-view-protocol = { path = "../view/protocol" }

# third party
digest = "0.9"
hex = "0.4"
rand_core = "0.6"
rand_hc = "0.3"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0"
structopt = "0.3"
url = "2.1"

[target.'cfg(any(target_feature = "avx2", target_feature = "avx"))'.dependencies]
curve25519-dalek = { version = "4.0.0-pre.0", default-features = false, features = ["simd_backend", "nightly"] }

[target.'cfg(not(any(target_feature = "avx2", target_feature = "avx")))'.dependencies]
curve25519-dalek = { version = "4.0.0-pre.0", default-features = false, features = ["nightly", "u64_backend"] }
