[package]
name = "fog-ingest-enclave"
version = "1.0.1-pre1"
authors = ["MobileCoin"]
edition = "2018"
license = "GPL-3.0"

[lib]
name = "fog_ingest_enclave"
path = "src/lib.rs"

[dependencies]
fog-ingest-enclave-api = { path = "./api" }
fog-ingest-enclave-edl = { path = "./edl" }
fog-kex-rng = { path = "../../kex_rng" }
fog-ocall-oram-storage-edl = { path = "../../ocall_oram_storage/edl" }
fog-ocall-oram-storage-untrusted = { path = "../../ocall_oram_storage/untrusted" }
fog-recovery-db-iface = { path = "../../recovery_db_iface", default-features = false }
fog-types = { path = "../../fog_types", default-features = false }

mc-attest-core = { path = "../../../mobilecoin/attest/core" }
mc-attest-enclave-api = { path = "../../../mobilecoin/attest/enclave-api", default-features = false }
mc-common = { path = "../../../mobilecoin/common" }
mc-enclave-boundary = { path = "../../../mobilecoin/enclave-boundary" }
mc-crypto-keys = { path = "../../../mobilecoin/crypto/keys" }
mc-util-serial = { path = "../../../mobilecoin/util/serial" }
mc-sgx-debug-edl = { path = "../../../mobilecoin/sgx/debug-edl" }
mc-sgx-panic-edl = { path = "../../../mobilecoin/sgx/panic-edl" }
mc-sgx-report-cache-api = { path = "../../../mobilecoin/sgx/report-cache/api" }
mc-sgx-slog-edl = { path = "../../../mobilecoin/sgx/slog-edl" }
mc-sgx-types = { path = "../../../mobilecoin/sgx/types" }
mc-sgx-urts = { path = "../../../mobilecoin/sgx/urts" }

[dev-dependencies]
mc-common = { path = "../../../mobilecoin/common", features = ["loggers"] }
mc-crypto-rand = { path = "../../../mobilecoin/crypto/rand" }
mc-util-from-random = { path = "../../../mobilecoin/util/from-random" }
fog-test-infra = { path = "../../test_infra" }
criterion = "0.3"

[build-dependencies]
mc-util-build-sgx = { path = "../../../mobilecoin/util/build/sgx" }
mc-util-build-script = { path = "../../../mobilecoin/util/build/script" }

cargo-emit = "0.1.1"
pkg-config = "0.3"

[[bench]]
name = "add_user"
harness = false
