[package]
name = "fog-ledger-enclave"
version = "1.0.1-pre1"
authors = ["MobileCoin"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
mc-attest-core = { path = "../../../mobilecoin/attest/core" }
mc-attest-enclave-api = { path = "../../../mobilecoin/attest/enclave-api" }
mc-common = { path = "../../../mobilecoin/common" }
mc-enclave-boundary = { path = "../../../mobilecoin/enclave-boundary" }
mc-crypto-keys = { path = "../../../mobilecoin/crypto/keys" }
mc-util-serial = { path = "../../../mobilecoin/util/serial" }
mc-sgx-types = { path = "../../../mobilecoin/sgx/types" }
mc-sgx-urts = { path = "../../../mobilecoin/sgx/urts" }
mc-sgx-debug-edl = { path = "../../../mobilecoin/sgx/debug-edl" }
mc-sgx-panic-edl = { path = "../../../mobilecoin/sgx/panic-edl" }
mc-sgx-report-cache-api = { path = "../../../mobilecoin/sgx/report-cache/api" }
mc-sgx-slog-edl = { path = "../../../mobilecoin/sgx/slog-edl" }

fog-ledger-enclave-api = { path = "./api" }
fog-ledger-enclave-edl = { path = "./edl" }

[build-dependencies]
mc-util-build-sgx = { path = "../../../mobilecoin/util/build/sgx" }
mc-util-build-script = { path = "../../../mobilecoin/util/build/script" }

cargo-emit = "0.1.1"
pkg-config = "0.3"
